添加合适路由

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <div id='index'>
+        <script src='fetch.js'></script>
         <script src='app.js'></script>
     </div>
 </body>
