添加服务器代码

--- a/www/indexs.html
+++ b/www/indexs.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>webpack App</title>
+    <title>测试</title>
 </head>
-
 <body>
-    <div id='index'>
+   <div id='index'>
         <script src="fetch.js"></script>
         <script src='app.js'></script>
     </div>
 </body>
-
 </html>
